# ceebi

./: .deepsource.toml  .editorconfig  .env  .eslintrc.json  .gitignore  .local.env  .prettierignore  Cargo.toml  README.md  capacitor.config.ts  insertPartytown.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tailwind.preset.js  test.json  tsconfig.base.json  vite.config.ts
android/admin/: build.gradle  capacitor.settings.gradle
android/client/: build.gradle  capacitor.settings.gradle
apps/admin/: .deepsource.toml  .eslintrc.js  CHANGELOG.md  README.md  capacitor-plugins.json  capacitor.config.ts  index.html  jest.config.ts  package.json  project.json  tailwind.config.js  vite.config.ts
apps/admin-e2e/: project.json
apps/client/: .deepsource.toml  .env  .env.schema  CHANGELOG.md  README.md  attendance.json  capacitor-plugins.json  capacitor.config.ts  index.html  pnpm-lock.yaml  project.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/client-e2e/: project.json
apps/console/: .deepsource.toml  README.md  app.vue  formkit.config.js  i18n.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  project.json  tailwind-theme.js  tailwind.config.js
apps/desktop/: .deepsource.toml  README.md  capacitor.config.ts  index.html  package.json  postcss.config.js  project.json  tailwind.config.js  tsconfig.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml
keystores/: admin.jks
locales/: ca.yaml  de.yaml  en.yaml  es.yaml  eu.yaml  fr.yaml  gl.yaml  project.babel
prisma/: .gitignore  schema.prisma
(+283 files in other folders)
